kustomize/cicd/harbor/resources/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: harbor
  namespace: harbor
spec:
  mtls:
    mode: STRICT
