kustomize/cicd/harbor/resources/ingress.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: ServersTransport
# metadata:
#   name: harbortransport
#   namespace: harbor

# spec:
#   serverName: container.health
#   insecureSkipVerify: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-ingress-route
  namespace: harbor
  annotations:
    kubernetes.io/ingress.class: traefik-external
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`registry.container.health`)
      kind: Rule
      priority: 10
      services:
        - name: harbor
          port: 443
          strategy: RoundRobin
          weight: 10
          #scheme: https
          serversTransport: harbor-server-transport
      # middlewares:
      #   - name: rate-limit
      #     namespace: traefik
      #   - name: https-redirectscheme
      #     namespace: traefik
      #   - name: default-headers
      #     namespace: traefik
      #   - name: compress
      #     namespace: traefik
  tls:
    secretName: container-health-tls
